vcs/specs/parser/fail/expressions/missing_closure_body.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, closure, body, error
// @description: Closure missing body expression
// @expected-error: E018

fn test() {
    let f = |x|;  // Missing closure body
}
